# finite-group-interp

./: .gitignore  .pre-commit-config.yaml  README.md  WRITEUP.md  pyproject.toml
.github/workflows/: ci.yml
core/: config_schema.py  logging_jsonl.py  manifest.py  metrics.py  trainer.py
core/models/: one_layer_transformer.py
docs/: research-log.md
projects/finite-groups/: run.py  sweep.py
projects/finite-groups/src/finite_groups/: __init__.py  catalog.py  generators.py  group.py  presentations.py  task.py
projects/finite-groups/src/finite_groups/experiments/: __init__.py  cli.py  config.py  trainer.py
projects/finite-groups/src/finite_groups/grokking/: cli.py  config.py  schedule.py  trainer.py
projects/finite-groups/src/finite_groups/representations/: characters.py  core.py  projectors.py
projects/finite-groups/tests/: test_catalog.py  test_characters.py  test_cli.py  test_config.py  test_data.py  test_generators.py  test_group.py  test_manifest.py  test_model.py  test_presentations.py  test_projectors.py  test_representations.py  test_schedule.py  test_task.py  test_trainer.py
reports/: 01-c113-calibration.md  02-irreps-vs-cosets.md
scripts/: _pairfig_shard.py  analyze_learnability_trajectory.py  analyze_learnability_trajectory_d64.py  analyze_run.py  compare.py  compare_pairs.py  evaluate.py  fve_gap_stats.py  learnability_breakdown.py  pair_figures.py  pairfig_run.py  run.py  run_ensemble.py  sweep.py  sweep_parallel.py
src/finite_group_interp/: model.py  task.py
src/finite_group_interp/analysis/: __init__.py  cache.py  coset_metrics.py  evidence.py  figures.py  functional_form.py  fve_gap_stats.py  irrep_metrics.py  learnability_trajectory.py  loading.py  run_analysis.py
src/finite_group_interp/groups/: catalog.py  group.py  presentations.py
src/finite_group_interp/representations/: characters.py  irreps.py  projectors.py
src/finite_group_interp/training/: config.py  ensemble.py  manifest.py  trainer.py
src/same_character_table_interp/: __init__.py  model.py  task.py
src/same_character_table_interp/analysis/: cache.py  compare.py  coset_metrics.py  evidence.py  figures.py  functional_form.py  irrep_metrics.py  learnability_trajectory.py  loading.py  run_analysis.py
src/same_character_table_interp/groups/: __init__.py  catalog.py  generators.py  presentations.py
src/same_character_table_interp/representations/: characters.py  core.py  irreps.py  projectors.py
src/same_character_table_interp/training/: __init__.py  batched_adamw.py  cli.py  config.py  ensemble.py  trainer.py
tests/: conftest.py  test_batched_adamw.py  test_cache.py  test_catalog.py  test_characters.py  test_cli.py  test_compare.py  test_compare_parity.py  test_config.py  test_coset_metrics.py  test_ensemble.py  test_evidence.py  test_fc_model.py  test_figures.py  test_functional_form.py  test_fve_gap_stats.py  test_generators.py  test_group.py  test_heisenberg.py  test_irrep_metrics.py  test_irreps.py  test_learnability_trajectory.py  test_loading.py  test_manifest.py  test_model.py  test_presentations.py  test_projectors.py  test_representations.py  test_run_analysis.py  test_schedule.py  test_subgroups.py  test_task.py  test_trainer.py
