[project]
name = "ai-safety-portfolio"
version = "0.1.0"
description = "AI Safety & Representation Geometry Portfolio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "sympy>=1.12",
    "einops>=0.8.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=7.0.0",
    "ruff>=0.15.15",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
]

[tool.ruff]
line-length = 100

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = ["projects/finite-groups/src"]
files = ["core", "projects/finite-groups/src"]
python_version = "3.10"
strict = true
# The bar is `strict` with zero `# type: ignore` comments in first-party code.
# If a third-party library ever forces a concession, prefer a narrow
# per-module override here over inline ignores.
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
pythonpath = ["projects/finite-groups/src", "."]
addopts = "-v --tb=short"
testpaths = ["projects/finite-groups/tests"]
