[project]
name = "same-character-table-interp"
version = "0.1.0"
description = "What algorithm does a neural network learn for finite group multiplication? Mechanistic interpretability of grokking on group operations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "sympy>=1.12",
    "einops>=0.8.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/same_character_table_interp"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
]

[tool.ruff]
line-length = 100

[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = ["src"]
files = ["src", "scripts"]
python_version = "3.10"
strict = true
# The bar is `strict` with zero `# type: ignore` comments in first-party code.
# If a third-party library ever forces a concession, prefer a narrow
# per-module override here over inline ignores.
warn_unused_ignores = true

# seaborn ships no type stubs (and types-seaborn is unmaintained); figures only
# use it for theming, so a narrow per-module override is the right concession.
[[tool.mypy.overrides]]
module = "seaborn.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
# pythonpath is belt-and-braces alongside the editable install: macOS can mark
# .venv contents with the UF_HIDDEN flag (propagated from the dir flag uv sets),
# and Python 3.12+ silently skips hidden .pth files. Fix: chflags -R nohidden .venv
pythonpath = ["src"]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
source = ["same_character_table_interp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
